# study-sqltest-python

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  run-test.py  target.sql
queries/find_product/: find_product.sql  run-test.py  test_find_product.py
queries/find_product/test/: data.sql
queries/find_product/testdata/: setup.sql
sqltest/: README.md  pyproject.toml
sqltest/src/sqltest/: __init__.py  testlib.py  tests.py
test/: data.sql
